# work_supa

./: .cursorrules  .env  .env.example  .gitignore  DASHBOARD_README.md  EXECUTIVE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SECURITY_CODE_REVIEW.md  app.py  app_column_formatting_fixed.py  app_enhanced_complete.py  bond_dashboard.py  cleanup_logs.py  content_inspector.py  dashboard_health_report.json  dashboard_monitor.py  db_pipe.py  dtale_app.py  dtale_multi_tab_app.py  env.txt  launch_dtale_dashboard.py  project_changelog.md  pyproject.toml  quick_status.py  run_dashboard.py  run_pipe.py  run_pipeline.bat  run_pipeline.ps1  sqlite_etl_debug.txt  supabase_etl_debug.txt  test_dashboard.py
.cursor/: mcp.json  mcp.json.template
ai_instructions/: academic_research.md  backtesting.md  research_paper_directions.md  system.md  xbbg_api.md
analytics/: t.ipynb
analytics tables/: tables.ipynb
bond-excel-app/: package-lock.json  package.json
change logs/: project_changelog.md  quick_reference.md
change_logs/: project_changelog.md  xbbg_vectorbt.md
config/: config.yaml
database documentation/: PROJECT_SUMMARY.md  QUICK_REFERENCE.md  pipe.md
db design/: analyze_data_structure.py  data_structure_analysis.json  database_design_specification.md  notes and questions on db.md
docs/: ARCHITECTURE.md  DATA_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  pipe.md
historical g spread/: bond_z.parquet  bond_z_enhanced.parquet  g_sprd_historical_parquet.py  g_z.py  g_z_queries.ipynb
mcp-test/: simple-mcp.js
mcp_infra/: npm-wrapper.cmd  (+1 more)
(+185 files in other folders)
